--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "country-flag-icons": "^1.5.21",
     "lucide-react": "^0.552.0",
     "next": "16.0.1",
     "react": "19.2.0",
